--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>万能收款码</title>
     <script>
     var setting = {
-        aliUrl: "HTTPS://QR.ALIPAY.COM/FKX05010GLFC4NTNYHTID5"
+        aliUrl: "http://t.cn/Efu0s1P"
     }
     </script>
     <style>
@@ -79,7 +79,7 @@
         </div>
         <div class="code-footer">扫描以上二维码向我付款</div>
     </div>
-    <!-- https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&f=wallet&a=1&ac=A797A0F9F681C6FF8CC34B23C43FCBFEC852E009B700ECDA5A1CD722E788E9BD&u=226883&n=a+%E5%98%89%E5%84%BF%E7%82%B9%E5%8D%A1 -->
+    <!-- http://t.cn/EfuTZCd -->
     <div class="code-item" id="code-qq">
         <div class="code-title"></div>
         <div class="code-area">
@@ -87,7 +87,7 @@
         </div>
         <div class="code-footer">长按识别以上二维码向我付款</div>
     </div>
-    <!-- wxp://f2f02ccQzD4OxyHGxXArA2MmTgs-qSt04r_y -->
+    <!-- wxp://f2f0T4hIW0cGDer3PvhGJP4sMsH60b2z59n0 -->
     <div class="code-item" id="code-wechat">
         <div class="code-title"></div>
         <div class="code-area">
